--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.2.26",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
+    "aws-amplify": "^4.3.8",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
