--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.1",
     "aws-amplify": "^4.3.8",
-    "next": "12.0.4",
+    "lodash": "^4.17.21",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
